<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LlistaActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoPanelHeight="30dp"
        sothree:umanoShadowHeight="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/slider"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/buit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/llistaBuida"
                    android:visibility="gone" />

                <ListView
                    android:id="@+id/llista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_alignParentBottom="true"
            android:background="#ff8800"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:id="@+id/up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/entrada_dades"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/up" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/entrada_dades"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/down" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFFF00"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entrada_dades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/afegir"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/entrada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hintEntrada" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/labelQuantitat"
                        android:textColor="#ff804502"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/quantitat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="1"
                        android:textColor="#ff804502" />

                    <Button
                        android:id="@+id/menys"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:drawable/arrow_down_float" />

                    <Button
                        android:id="@+id/mes"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:drawable/arrow_up_float" />


                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/afegir"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/afegir"
                android:elevation="10dp"
                android:src="@drawable/focused_afegir" />
        </RelativeLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</RelativeLayout>
